[gd_scene load_steps=9 format=3 uid="uid://bj2556dthmk1e"]

[ext_resource type="Script" uid="uid://4flv2qyji2mp" path="res://addons/player2/templates/shared/simple_text_interface.gd" id="1_6vno8"]
[ext_resource type="StyleBox" uid="uid://h7a4syba52h8" path="res://addons/player2/ui/theme/Player2StyleBoxFlat.tres" id="1_ts831"]
[ext_resource type="StyleBox" uid="uid://cv5q6cs7tgau5" path="res://addons/player2/ui/theme/Player2GreenStylebox.tres" id="2_asp3k"]
[ext_resource type="Script" uid="uid://demr3r0wkqqj1" path="res://addons/player2/nodes/Player2STT.gd" id="2_wfmdp"]
[ext_resource type="Texture2D" uid="uid://yjvo55rh4op4" path="res://addons/player2/ui/texture/send-alt-1-svgrepo-com.svg" id="2_wtujj"]
[ext_resource type="Script" uid="uid://b2t46qb8xam24" path="res://addons/player2/templates/shared/thinking_animation.gd" id="3_btci8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts831"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.67488, 0.6536, 0.76, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.81, 0.81, 0.81, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_wtujj"]
font_size = 49

[node name="Simple Interface" type="Panel" node_paths=PackedStringArray("button", "text", "chat_container", "scroll_container", "thinking", "player2_stt")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -161.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = ExtResource("1_ts831")
script = ExtResource("1_6vno8")
button = NodePath("Button")
text = NodePath("TextEdit")
chat_container = NodePath("History/Chat List")
scroll_container = NodePath("History")
thinking = NodePath("Thinking Animation")
player2_stt = NodePath("Player2STT")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = 27.0
offset_right = -27.0
offset_bottom = -27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_asp3k")
icon = ExtResource("2_wtujj")
icon_alignment = 1
expand_icon = true

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 16.0
offset_right = -205.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_placeholder_color = Color(0.478067, 0.4615, 0.71, 1)
theme_override_colors/font_color = Color(0.194667, 0.18, 0.4, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ts831")
placeholder_text = "(type your message here!)"

[node name="History" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -222.0
offset_bottom = -46.0
grow_horizontal = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="Chat List" type="VBoxContainer" parent="History"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
alignment = 2

[node name="STT Display" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 18.0
offset_top = -37.0
offset_bottom = -1.0
grow_horizontal = 2

[node name="TTS Label" type="RichTextLabel" parent="STT Display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[i]Hold Tab to do STT[/i]"

[node name="Listening Label" type="Label" parent="STT Display"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "(Listening...)"

[node name="Reply Wait Label" type="Label" parent="STT Display"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "(Processing STT...)"

[node name="Thinking Animation" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 34)
text = "..."
label_settings = SubResource("LabelSettings_wtujj")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_btci8")

[node name="Timer" type="Timer" parent="Thinking Animation"]
wait_time = 0.3
autostart = true

[node name="Player2STT" type="Node" parent="."]
script = ExtResource("2_wfmdp")
metadata/_custom_type_script = "uid://demr3r0wkqqj1"

[connection signal="timeout" from="Thinking Animation/Timer" to="Thinking Animation" method="inc_count"]
[connection signal="listening_started" from="Player2STT" to="STT Display/TTS Label" method="hide"]
[connection signal="listening_started" from="Player2STT" to="STT Display/Listening Label" method="show"]
[connection signal="listening_stopped" from="Player2STT" to="STT Display/Listening Label" method="hide"]
[connection signal="reply_wait_started" from="Player2STT" to="STT Display/Reply Wait Label" method="show"]
[connection signal="reply_wait_stopped" from="Player2STT" to="STT Display/Reply Wait Label" method="hide"]
[connection signal="stt_partial_received" from="Player2STT" to="." method="set_text_input"]
[connection signal="stt_received" from="Player2STT" to="." method="_send"]
[connection signal="stt_received" from="Player2STT" to="STT Display/TTS Label" method="show"]
